--- a/Fundamentals2/Conditionals/conditionals.html
+++ b/Fundamentals2/Conditionals/conditionals.html
@@ -30,6 +30,11 @@
     <select name="theme" id="theme">
         <option value="white">White</option>
         <option value="black">Black</option>
+
+        <!-- * Adding new colors -->
+        <option value="purple">Purple</option>
+        <option value="blue">Blue</option>
+        <option value="yellow">Yellow</option>
     </select>
     <h1>This is my website</h1>
 
@@ -110,7 +115,40 @@
             html.style.color = textColor;
         }
 
-        selectT.addEventListener('change', () => selectT.value === 'black' ? update('black', 'white') : update('white', 'black'));
+        // Use switch statement instead of ternary when changing a theme
+
+        selectT.addEventListener('change', () => {
+            const choice = selectT.value;
+
+            switch (choice) {
+                case 'black':
+                    update('black', 'white')
+                    break;
+
+                case 'white':
+                    update('white', 'black')
+                    break;
+
+                case 'purple':
+                    update('purple', 'white')
+                    break;
+
+                case 'blue':
+                    update('blue', 'white');
+                    break;
+
+                case 'yellow':
+                    update('yellow', 'black')
+                    break;
+
+                default:
+                    update('', '');
+
+            }
+
+        });
+
+       // selectT.addEventListener('change', () => selectT.value === 'black' ? update('black', 'white') : update('white', 'black'));
 
     </script>
 
